--- a/index.html
+++ b/index.html
@@ -5,10 +5,18 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>オンボーディング・アプリ</title>
+  <title>ワンネスキングダム</title>
+  <meta name="description" content="愛、平和、調和を基盤としたメタソーシャルプラットフォームであり、貢献とつながりに基づく新しい国際コミュニティを創造します。" />
+  <meta property="og:title" content="ワンネスキングダム" />
+  <meta property="og:description" content="愛、平和、調和を基盤としたメタソーシャルプラットフォーム" />
   <meta property="og:image" content="https://bolt.new/static/og_default.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:image" content="https://bolt.new/static/og_default.png" />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Spline+Sans:wght@300;400;500;600;700&family=Noto+Sans:wght@300;400;500;600;700&display=swap"
+    rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&display=swap"
+    rel="stylesheet" />
 </head>
 
 <body>
